--- a/src/main/app/src/core/App.css
+++ b/src/main/app/src/core/App.css
@@ -1,6 +1,12 @@
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
 .app {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 
