--- a/src/main/app/src/index.css
+++ b/src/main/app/src/index.css
@@ -4,6 +4,7 @@ body {
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
+  background-color: #f4f4f4;
 }
 
 code {
