--- a/src/main/app/src/product/NutritionFacts.css
+++ b/src/main/app/src/product/NutritionFacts.css
@@ -2,14 +2,22 @@
 .nutrition-facts-container {
     width: 80%;
     max-width: 500px;
+    border-radius: 4px;
+    border: 1px solid rgba(0,0,0,0.15);
+    box-shadow: 0 2px 3px rgba(0,0,0,0.06);
 }
 
 .nutrition-facts-first {
     border-bottom: 3px solid black;
+    margin: 0 3px 0 3px;
 }
 
 .nutrition-facts-first h2{
     text-align: center;
+}
+
+.nutrition-facts-second {
+    margin: 0 3px 0 3px;
 }
 
 .nutrition-facts-second-nutrients {
@@ -32,4 +40,8 @@ tr {
 
 .tg-dailyvalue-bold {
     font-weight: bold;
+}
+
+.nutrition-facts-third {
+    margin: 0 3px 0 3px;
 }
