--- a/src/main/app/src/search/Pagination.css
+++ b/src/main/app/src/search/Pagination.css
@@ -1,8 +1,27 @@
 
 .pagination {
-
+    width: 30%;
+    height: 2em;
+    margin-top: 5px;
 }
 
 .pagination-button {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    border-radius: 4px;
+    border: 1px solid rgba(0,0,0,0.15);
+    box-shadow: 0 2px 3px rgba(0,0,0,0.06);
+    font-weight: bold;
+    background-color: rgba(0,0,0,0.06);
+}
 
+.pagination-button:hover {
+    background-color: #5DBCD2;
+}
+
+@media screen and (max-width: 630px) {
+    .pagination {
+        width: 55%;
+    }
 }
