--- a/src/main/app/src/search/ProductsCard.css
+++ b/src/main/app/src/search/ProductsCard.css
@@ -9,6 +9,7 @@
     border: 1px solid rgba(0,0,0,0.15);
     box-shadow: 0 2px 3px rgba(0,0,0,0.06);
     width: 100%;
+    outline: none;
 }
 
 .product-card-title {
@@ -16,7 +17,7 @@
     flex-direction: column;
     align-items: flex-start;
     overflow: hidden;
-    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .product-card-title h4 {
@@ -47,10 +48,12 @@
     font-size: small;
     margin: 0;
     color: gray;
+    text-align: center;
 }
 
 .product-card-body-item h4 {
    margin: 0 0 2px 0; 
+   text-align: center;
 }
 
 
