--- a/src/main/app/src/search/Search.css
+++ b/src/main/app/src/search/Search.css
@@ -12,7 +12,7 @@
     border-radius: 4px;
     border: 1px solid rgba(0,0,0,0.15);
     box-shadow: 0 2px 3px rgba(0,0,0,0.06);
-    height: 2.5em;
+    height: 3.5em;
     width: 35%;
 
     display: flex;
@@ -22,11 +22,9 @@
 .searchbar input {
     width: 100%;
     font-size: 1.1em;
-    background: none;
     outline: none;
     border: none;
     padding: 0 0 0 5px;
-    outline: none;
 }
 
 .searchbar button {
@@ -37,6 +35,7 @@
     border-radius: 0 4px 4px 0;
     background-color: rgba(0,0,0,0.06);
     outline: none;
+    cursor: pointer;
 }
 
 .searchbar button:hover {
@@ -53,7 +52,7 @@
     width: 45%;
 }
 
-@media screen and (max-width: 630px){
+@media screen and (max-width: 1100px){
     
     .results-container {
         width: 85%;
