--- a/src/main/app/src/constraints/IngredientConstraintCard.css
+++ b/src/main/app/src/constraints/IngredientConstraintCard.css
@@ -18,6 +18,7 @@ input[name="name"] {
 input[name="delete"] {
 
     width: 10%;
+    min-width: 56px;
     font-weight: 700;
     background: RGB(255 132 132);
     border: none;
