--- a/src/main/app/src/constraints/NutrientConstraintsCard.css
+++ b/src/main/app/src/constraints/NutrientConstraintsCard.css
@@ -7,6 +7,7 @@
     justify-content: center;
     flex-grow: 2;
     padding-bottom: 0.5em;
+	height: 2em;
 
 }
 
@@ -40,4 +41,10 @@ input[name="delete"]:hover {
 
     border: 1px solid red;
     outline: none;
+}
+
+@-moz-document url-prefix() { 
+.nutrient-constraints-card {
+     height: 3em;
+  }
 }
