--- a/src/main/app/src/search/ProductsCard.css
+++ b/src/main/app/src/search/ProductsCard.css
@@ -6,11 +6,17 @@
     color: inherit;
     text-decoration: none;
     border-radius: 4px;
-    border: 1px solid rgba(0,0,0,0.15);
+    border: 1px solid rgba(0,0,0,0.06);
     box-shadow: 0 2px 3px rgba(0,0,0,0.06);
     width: 100%;
     outline: none;
 }
+
+.product-card:hover {
+    border: 1px solid rgba(0,0,0,0.15);
+    outline: none;
+}
+
 
 .product-card-title {
     display: flex;
